--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "axios": "^1.3.4",
     "vue": "^3.2.47",
-    "vue-axios": "^3.5.2"
+    "vue-axios": "^3.5.2",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
