--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.3.4",
     "vue": "^3.2.47",
     "vue-axios": "^3.5.2",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue-upload-component": "^2.8.23"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
