--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "vue": "^3.2.47",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.1.6",
-    "vue-upload-component": "^2.8.23"
+    "vue-upload-component": "^2.8.23",
+    "vue3-openlayers": "^0.1.74"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
