--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "chart.js": "^4.2.1",
     "vue": "^3.2.47",
     "vue-axios": "^3.5.2",
+    "vue-chartjs": "^5.2.0",
     "vue-router": "^4.1.6",
     "vue-upload-component": "^2.8.23",
     "vue3-openlayers": "^0.1.74"
