--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "chart.js": "^4.2.1",
+    "proj4": "^2.9.0",
     "vue": "^3.2.47",
     "vue-axios": "^3.5.2",
     "vue-chartjs": "^5.2.0",
