--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^4.2.1",
     "ol": "^7.3.0",
     "proj4": "^2.9.0",
