--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.2",
+    "@vuelidate/validators": "^2.0.2",
     "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.2.1",
     "ol": "^7.3.0",
+    "pinia": "^2.0.35",
     "proj4": "^2.9.0",
     "vue": "^3.2.47",
     "vue-axios": "^3.5.2",
