--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "vue-chartjs": "^5.2.0",
     "vue-router": "^4.1.6",
     "vue-upload-component": "^2.8.23",
+    "vue3-carousel": "^0.3.1",
     "vue3-openlayers": "^0.1.74"
   },
   "devDependencies": {
