--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@vuelidate/core": "^2.0.2",
     "@vuelidate/validators": "^2.0.2",
     "axios": "^1.3.4",
+    "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.2.1",
     "ol": "^7.3.0",
